force-app/packaged/main/default/objects/Provisioning_Manifest_Package__c/Provisioning_Manifest_Package__c.object-meta.xml
<CustomObject>
    <label>Provisioning Manifest Package</label>
    <nameField>
        <displayFormat>PMP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Manifest Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>