force-app/packaged/main/default/objects/Provisioning_Manifest_Package__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <label>Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>