force-app/packaged/main/default/objects/Provisioning_Manifest_Package__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package Version</label>
    <referenceTo>sfLma__Package_Version__c</referenceTo>
    <relationshipLabel>Provisioning Manifest Packages</relationshipLabel>
    <relationshipName>Provisioning_Manifest_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>