force-app/packaged/main/default/objects/Provisioning_Manifest_Package__c/fields/Provisioning_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Manifest__c</fullName>
    <label>Provisioning Manifest</label>
    <referenceTo>Provisioning_Manifest__c</referenceTo>
    <relationshipLabel>Provisioning Manifest Packages</relationshipLabel>
    <relationshipName>Provisioning_Manifest_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>